--- a/pa01.md
+++ b/pa01.md
@@ -23,7 +23,7 @@ How: with the loop used for the first similarity function and using if: the last
        * We use the shift method for generation the shifted sequences.We compute the score with compare_score. Using Compare_score to find the matches. We store each score (for each shift)  in the list scores. If we see the score is higher than previous scores, we update the sequences that should be printed to the sequences that resulted on that score. We use the same process to capture the max of contiguous and the related shifted sequences
 
   * At the final step, I test my code thoroughly for catching all exceptions
-    * ValueError
+    * ValueErrors
     * using example sequences with different length
     * squences included wrong characters (whether all the characters are neucliotides or not)
 ## Source code
